--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
-    background: url('https://github.com/Luk4strikee/Learns-Tabs-Site/blob/main/img/thumb-1920-1328129.png') center center/cover;
+    background: url('img/thumb-1920-1328129.png') center center/cover;
     background-color: rgba(0, 0, 0, 0.4);
     background-blend-mode: color;
 }
